--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <title>Login Page</title>
 </head>
 <body>
-  
   <div class="menu">
-    <a href="home.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
   </div>
-
   <div class="login-form">
     <h2>Login</h2>
     <form>
