--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <div class="menu">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+    <a href="home.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
   </div>
   <div class="login-form">
     <h2>Login</h2>
