Created scores page and modified home page

--- a/home.html
+++ b/home.html
@@ -5,12 +5,20 @@
 </head>
 <body>
   <div class="menu">
-    <a href="#">Home</a>
+    <a href="home.html">Home</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="scores.html">Scores</a>
+    <a href="index.html">Login</a>
   </div>
 
-  <h1>Welcome to the Home Page</h1>
-  <p>This is the home page content.</p>
+  <h1>Welcome player1 play trivia game</h1>
+  <p>Press start</p>
+  <input type="submit" value="Play">
+  <p>Question 1: What is the capital of California?</p>
+  <input type="submit" value="Los Angeles">
+  <input type="submit" value="San Diego">
+  <input type="submit" value="San Francisco">
+  <input type="submit" value="Sacremento">
+
 </body>
 </html>
