--- a/scores.html
+++ b/scores.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About Page</title>
+  <title>Contact Page</title>
 </head>
 <body>
   <div class="menu">
@@ -10,9 +10,12 @@
     <a href="scores.html">Scores</a>
     <a href="index.html">Login</a>
   </div>
-
-  <h1>About Us</h1>
-  <p>This is the about page content.</p>
-
+  <h1>High Scores</h1>
+  <p>john doe 8</p>
+  <p>jane smith 7</p>
+  <p>jacson 5</p>
+  <h1>active games</h1>
+  <p>player1 5</p>
+  <p>player2 2</p>
 </body>
 </html>
