--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <div class="menu">
     <a href="home.html">Home</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="scores.html">Scores</a>
+    <a href="index.html">Login</a>
   </div>
   <div class="login-form">
     <h2>Login</h2>
