--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Page</title>
+  <title>Trivia Game</title>
 </head>
 <body>
   <div class="menu">
@@ -18,5 +18,6 @@
       <input type="submit" value="Login">
     </form>
   </div>
+  <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" width="150">
 </body>
 </html>
