Wrote CSS for index.html and home.html

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   </div>
 
   <h1>About Us</h1>
-  <p>This is the about page content.</p>
+  <p>Click <a href="https://github.com/tydye7/startup" anchor="Github">here</a> to access my Github</p>
 
 </body>
 </html>
