Wrote CSS for about.html

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="aboutStyles.css" />
   <title>Trivia Game</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <a href="index.html">Login</a>
   </div>
 
-  <h1>About Us</h1>
+  <h1>About Me</h1>
   <p>Click <a href="https://github.com/tydye7/startup" anchor="Github">here</a> to access my Github</p>
 
 </body>
