Wrote CSS for scores.html

--- a/home.html
+++ b/home.html
@@ -12,9 +12,9 @@
     <a href="index.html">Login</a>
   </div>
 
-  <h1>Welcome player1 play trivia game</h1>
-  <p>Press start</p>
-  <input type="submit" value="Play">
+  <h1>Welcome player1 Play Trivia Game</h1>
+  <p>Press Start</p>
+  <input type="submit" value="Start">
   <p>Question 1: What is the capital of California?</p>
   <input type="submit" value="Los Angeles">
   <input type="submit" value="San Diego">
