--- a/scores.html
+++ b/scores.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="scoresStyles.css" />
   <title>Trivia Game</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
   <p>john doe 8</p>
   <p>jane smith 7</p>
   <p>jacson 5</p>
-  <h1>active games</h1>
+  <h1>Active Games</h1>
   <p>player1 5</p>
   <p>player2 2</p>
 </body>
