Added tab image and changed image on login page

--- a/scores.html
+++ b/scores.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="scoresStyles.css" />
+  <link rel="icon" href="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/bf8dd150833377.58dad0c4806e9.png">
   <title>Trivia Game</title>
 </head>
 <body>
