--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="indexStyles.css" />
+  <link rel="icon" href="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/bf8dd150833377.58dad0c4806e9.png">
   <title>Trivia Game</title>
 </head>
 <body>
@@ -19,6 +20,6 @@
       <input type="submit" value="Login">
     </form>
   </div>
-  <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" width="150">
+  <img src="https://www.griswoldhomecare.com/images/blog/trivia.jpg" width="150">
 </body>
 </html>
