--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="menu">
-    <a href="home.html">Home</a>
+    <a href="play.html">Play</a>
     <a href="about.html">About</a>
     <a href="scores.html">Scores</a>
     <a href="index.html">Login</a>
