Made small CSS changes to all files

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <a href="index.html">Login</a>
   </div>
 
-  <h1>About Me</h1>
+  <h1>About Tyson McCulloch</h1>
   <p>Click <a href="https://github.com/tydye7/startup" anchor="Github">here</a> to access my Github</p>
 
 </body>
