--- a/about.html
+++ b/about.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <div class="menu">
-    <a href="play.html">Play</a>
+    <a href="index.html" onclick="logout()">Logout</a>
     <a href="about.html">About</a>
     <a href="scores.html">Scores</a>
-    <a href="index.html">Login</a>
+    <a href="play.html">Play</a>
+
   </div>
 
   <h1>About Tyson McCulloch</h1>
