--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
 </head>
 <body>
   <div class="menu">
-    <a href="play.html">Play</a>
+    <a href="index.html">Login</a>
     <a href="about.html">About</a>
     <a href="scores.html">Scores</a>
-    <a href="index.html">Login</a>
   </div>
+
+  <div id="game-container" style="display: none;">
+    <iframe src="play.html" frameborder="0" width="100%" height="100%"></iframe>
+  </div>
+  
   <div class="login-form">
     <h2>Login</h2>
-    <form>
-      <input type="text" placeholder="Username" required><br>
-      <input type="password" placeholder="Password" required><br>
+    <form onsubmit="login(event)">
+      <input type="text" id="username" placeholder="Username" required><br>
+      <input type="password" id="password" placeholder="Password" required><br>
       <input type="submit" value="Login">
     </form>
   </div>
+  
+  <script src="index.js"></script>
   <img src="https://www.griswoldhomecare.com/images/blog/trivia.jpg" width="150">
 </body>
 </html>
