--- a/play.html
+++ b/play.html
@@ -7,16 +7,16 @@
 </head>
 <body>
   <div class="menu">
-    <a href="play.html">Play</a>
+    <a href="index.html" onclick="logout()">Logout</a>
     <a href="about.html">About</a>
     <a href="scores.html">Scores</a>
-    <a href="index.html">Login</a>
+    <a href="play.html">Play</a>
   </div>
 
   <div class="container">
     <h1>Welcome to Trivia Game</h1>
     <div class="button-container">
-      <button onclick="startGame()">Start Game</button>
+      <button id="start-button" onclick="startGame()">Start Game</button>
     </div>
     <div class="question-container" style="display: none;">
       <div id="question"></div>
@@ -25,5 +25,7 @@
     </div>
     <div id="result" class="result-container"></div>
   </div>
+  
+  <script src="auth.js"></script>
 </body>
 </html>
