--- a/scores.html
+++ b/scores.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <div class="menu">
-    <a href="play.html">Play</a>
+    <a href="index.html" onclick="logout()">Logout</a>
     <a href="about.html">About</a>
     <a href="scores.html">Scores</a>
-    <a href="index.html">Login</a>
+    <a href="play.html">Play</a>
   </div>
   <h1>High Scores</h1>
   <p>john doe 8</p>
