finished third party endpoint

--- a/public/about.html
+++ b/public/about.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="aboutStyles.css" />
   <link rel="icon" href="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/bf8dd150833377.58dad0c4806e9.png">
   <title>Trivia Game</title>
+  <script src="about.js"></script>
 </head>
 <body>
   <div class="menu">
@@ -11,11 +12,12 @@
     <a href="about.html">About</a>
     <a href="scores.html">Scores</a>
     <a href="play.html">Play</a>
-
   </div>
 
   <h1>About Tyson McCulloch</h1>
   <p>Click <a href="https://github.com/tydye7/startup" anchor="Github">here</a> to access my Github</p>
+  <div id="quote" class="quote-box bg-light text-dark"></div>
 
+  <script src="client.js"></script>
 </body>
 </html>
