more db progress

--- a/public/scores.html
+++ b/public/scores.html
@@ -13,11 +13,10 @@
     <a href="play.html">Play</a>
   </div>
   <h1>High Scores</h1>
-  <p>john doe 8</p>
-  <p>jane smith 7</p>
-  <p>jacson 5</p>
+  <div id="highScoresContainer"></div>
   <h1>Active Games</h1>
-  <p>player1 5</p>
-  <p>player2 2</p>
+  <div id="activeGamesContainer"></div>
+
+  <script src="scores.js"></script>
 </body>
 </html>
