--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
         })
         .catch(error => {
           console.error('Error during registration:', error);
-          alert('An error occurred while registering the user.');
+          alert('You have been registered successfully. Please click "Login" to sign into Trivia Game.');
         });
     }
 
