--- a/public/scores.html
+++ b/public/scores.html
@@ -34,6 +34,38 @@
         .catch((error) => {
           console.error('Error fetching high scores:', error);
         });
+
+      // Connect to the WebSocket server
+      const webSocket = new WebSocket('ws://localhost:4000');
+
+      // WebSocket connection open event
+      webSocket.onopen = () => {
+        console.log('WebSocket connection opened');
+      };
+
+      // WebSocket message event
+      webSocket.onmessage = (event) => {
+        const message = event.data;
+        // Display the message in the active games container
+        const activeGamesContainer = document.getElementById('activeGamesContainer');
+        const messageElement = document.createElement('p');
+        messageElement.textContent = message;
+        activeGamesContainer.appendChild(messageElement);
+      };
+
+      // WebSocket connection close event
+      webSocket.onclose = () => {
+        console.log('WebSocket connection closed');
+      };
+
+      // Function to send a message over the WebSocket connection
+      function sendMessage() {
+        const messageInput = document.getElementById('messageInput');
+        const message = messageInput.value;
+        // Send the message to the server
+        webSocket.send(message);
+        messageInput.value = '';
+      }
     </script>
   </body>
 </html>
